--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,68 +6,58 @@ ms.author: tdykstra
 ms.custom: mvc
 ms.date: 01/04/2019
 uid: migration/22-to-30
-ms.openlocfilehash: f5debd68d052c9f9191935a828a6fd5f9989c578
-ms.sourcegitcommit: ed76cc752966c604a795fbc56d5a71d16ded0b58
+ms.openlocfilehash: 01cfaffc5090bdccd80d23668f6f1e7f61f32eeb
+ms.sourcegitcommit: a91e8dd2f4b788114c8bc834507277f4b5e8d6c5
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 02/02/2019
-ms.locfileid: "55667360"
+ms.lasthandoff: 02/04/2019
+ms.locfileid: "55712235"
 ---
-# <a name="migrate-from-aspnet-core-22-to-30-preview-2"></a><span data-ttu-id="71f21-103">Migrer d’ASP.NET Core 2.2 à 3.0 Preview 2</span><span class="sxs-lookup"><span data-stu-id="71f21-103">Migrate from ASP.NET Core 2.2 to 3.0 Preview 2</span></span>
+# <a name="migrate-from-aspnet-core-22-to-30-preview-2"></a><span data-ttu-id="9c40a-103">Migrer d’ASP.NET Core 2.2 à 3.0 Preview 2</span><span class="sxs-lookup"><span data-stu-id="9c40a-103">Migrate from ASP.NET Core 2.2 to 3.0 Preview 2</span></span>
 
-<span data-ttu-id="71f21-104">Par [Scott Addie](https://github.com/scottaddie) et [Rick Anderson](https://twitter.com/RickAndMSFT)</span><span class="sxs-lookup"><span data-stu-id="71f21-104">By [Scott Addie](https://github.com/scottaddie) and [Rick Anderson](https://twitter.com/RickAndMSFT)</span></span>
+<span data-ttu-id="9c40a-104">Par [Scott Addie](https://github.com/scottaddie) et [Rick Anderson](https://twitter.com/RickAndMSFT)</span><span class="sxs-lookup"><span data-stu-id="9c40a-104">By [Scott Addie](https://github.com/scottaddie) and [Rick Anderson](https://twitter.com/RickAndMSFT)</span></span>
 
-<span data-ttu-id="71f21-105">Cet article explique comment mettre à jour un projet ASP.NET Core 2.2 existant vers ASP.NET Core 3.0 preview 2.</span><span class="sxs-lookup"><span data-stu-id="71f21-105">This article explains how to update an existing ASP.NET Core 2.2 project to ASP.NET Core 3.0 preview 2.</span></span>
+<span data-ttu-id="9c40a-105">Cet article explique comment mettre à jour un projet ASP.NET Core 2.2 existant vers ASP.NET Core 3.0 preview 2.</span><span class="sxs-lookup"><span data-stu-id="9c40a-105">This article explains how to update an existing ASP.NET Core 2.2 project to ASP.NET Core 3.0 preview 2.</span></span>
 
 [!INCLUDE[](~/includes/net-core-prereqs-all-3.0.md)]
 
-## <a name="update-the-project-file"></a><span data-ttu-id="71f21-106">Mettre à jour le fichier projet</span><span class="sxs-lookup"><span data-stu-id="71f21-106">Update the project file</span></span>
+## <a name="update-the-project-file"></a><span data-ttu-id="9c40a-106">Mettre à jour le fichier projet</span><span class="sxs-lookup"><span data-stu-id="9c40a-106">Update the project file</span></span>
 
-* <span data-ttu-id="71f21-107">Définir le [Moniker du Framework (TFM) cible](/dotnet/standard/frameworks#referring-to-frameworks) à `netcoreapp3.0`:</span><span class="sxs-lookup"><span data-stu-id="71f21-107">Set the [Target Framework Moniker (TFM)](/dotnet/standard/frameworks#referring-to-frameworks) to `netcoreapp3.0`:</span></span>
+* <span data-ttu-id="9c40a-107">Définir le [Moniker du Framework (TFM) cible](/dotnet/standard/frameworks#referring-to-frameworks) à `netcoreapp3.0`:</span><span class="sxs-lookup"><span data-stu-id="9c40a-107">Set the [Target Framework Moniker (TFM)](/dotnet/standard/frameworks#referring-to-frameworks) to `netcoreapp3.0`:</span></span>
 
   ```xml
   <TargetFramework>netcoreapp3.0</TargetFramework>
   ```
 
-* <span data-ttu-id="71f21-108">Supprimez les `<PackageReference>` à la [Microsoft.AspNetCore.All](xref:fundamentals/metapackage) ou [Microsoft.AspNetCore.App](xref:fundamentals/metapackage-app) métapackage.</span><span class="sxs-lookup"><span data-stu-id="71f21-108">Remove any `<PackageReference>` to the [Microsoft.AspNetCore.All](xref:fundamentals/metapackage) or [Microsoft.AspNetCore.App](xref:fundamentals/metapackage-app) metapackage.</span></span>
+* <span data-ttu-id="9c40a-108">Supprimez les `<PackageReference>` à la [Microsoft.AspNetCore.All](xref:fundamentals/metapackage) ou [Microsoft.AspNetCore.App](xref:fundamentals/metapackage-app) métapackage.</span><span class="sxs-lookup"><span data-stu-id="9c40a-108">Remove any `<PackageReference>` to the [Microsoft.AspNetCore.All](xref:fundamentals/metapackage) or [Microsoft.AspNetCore.App](xref:fundamentals/metapackage-app) metapackage.</span></span>
 
-  <span data-ttu-id="71f21-109">Il existe un problème connu dans la version préliminaire 1 : les projets qui ne commencent pas par `<Project Sdk="Microsoft.NET.Sdk.Web">` obtenez des erreurs du compilateur ou runtime due à l’absence `Microsoft.AspNetCore.*` assemblys.</span><span class="sxs-lookup"><span data-stu-id="71f21-109">There's a known issue in Preview 1: projects that don't start with `<Project Sdk="Microsoft.NET.Sdk.Web">` get compiler or runtime errors due to missing `Microsoft.AspNetCore.*` assemblies.</span></span> <span data-ttu-id="71f21-110">C’est souvent le cas pour les projets de test et des bibliothèques de classes.</span><span class="sxs-lookup"><span data-stu-id="71f21-110">This is most often the case for test projects and class libraries.</span></span> <span data-ttu-id="71f21-111">La solution de contournement consiste à ajouter le code suivant à la *.csproj* fichier.</span><span class="sxs-lookup"><span data-stu-id="71f21-111">The workaround is to add the following to the *.csproj* file.</span></span>
+* <span data-ttu-id="9c40a-109">Mise à jour le `Version` sur restant `<PackageReference>` éléments pour `Microsoft.AspNetCore.*` packages pour la version préliminaire actuelle (par exemple, 3.0.0-preview-18579-0053).</span><span class="sxs-lookup"><span data-stu-id="9c40a-109">Update the `Version` on remaining `<PackageReference>` elements for `Microsoft.AspNetCore.*` packages to the current preview (for example, 3.0.0-preview-18579-0053).</span></span>
 
-  ```xml
-  <ItemGroup>
-     <FrameworkReference Include="Microsoft.AspNetCore.App" />
-  </ItemGroup>
-  ```
+  <span data-ttu-id="9c40a-110">S’il n’existe aucune version 3.0 d’un package, le package peut ont été déconseillé dans 3.0.</span><span class="sxs-lookup"><span data-stu-id="9c40a-110">If there is no 3.0 version of a package, the package might have been deprecated in 3.0.</span></span> <span data-ttu-id="9c40a-111">Nombre d'entre eux font partie de `Microsoft.AspNetCore.App` et ne doivent pas être référencés individuellement plus.</span><span class="sxs-lookup"><span data-stu-id="9c40a-111">Many of these are part of `Microsoft.AspNetCore.App` and should not be referenced individually anymore.</span></span> <span data-ttu-id="9c40a-112">Pour obtenir une liste préliminaire des packages ne sont plus produites dans 3.0, consultez [aspnet/AspNetCore #3756](https://github.com/aspnet/AspNetCore/issues/3756).</span><span class="sxs-lookup"><span data-stu-id="9c40a-112">For a preliminary list of packages no longer produced in 3.0, see [aspnet/AspNetCore #3756](https://github.com/aspnet/AspNetCore/issues/3756).</span></span>
 
-  <span data-ttu-id="71f21-112">Pour plus d’informations, consultez [problème NuGet/accueil #7342](https://github.com/NuGet/Home/issues/7342).</span><span class="sxs-lookup"><span data-stu-id="71f21-112">For more information, see [NuGet/Home issue #7342](https://github.com/NuGet/Home/issues/7342).</span></span>
+* <span data-ttu-id="9c40a-113">Certains assemblys ont été supprimées de `Microsoft.AspNetCore.App` entre 2.x et 3.0.</span><span class="sxs-lookup"><span data-stu-id="9c40a-113">Some assemblies were removed from `Microsoft.AspNetCore.App` between 2.x and 3.0.</span></span> <span data-ttu-id="9c40a-114">Vous devrez peut-être ajouter `<PackageReference>` si vous utilisez des API à partir de packages répertoriés dans les éléments [aspnet/AspNetCore #3755](https://github.com/aspnet/AspNetCore/issues/3755)</span><span class="sxs-lookup"><span data-stu-id="9c40a-114">You may need to add `<PackageReference>` items if you're using APIs from packages listed in [aspnet/AspNetCore #3755](https://github.com/aspnet/AspNetCore/issues/3755)</span></span>
 
-* <span data-ttu-id="71f21-113">Mise à jour le `Version` sur restant `<PackageReference>` éléments pour `Microsoft.AspNetCore.*` packages pour la version préliminaire actuelle (par exemple, 3.0.0-preview-18579-0053).</span><span class="sxs-lookup"><span data-stu-id="71f21-113">Update the `Version` on remaining `<PackageReference>` elements for `Microsoft.AspNetCore.*` packages to the current preview (for example, 3.0.0-preview-18579-0053).</span></span>
+  <span data-ttu-id="9c40a-115">Par exemple, `Microsoft.EntityFrameworkCore` et `System.Data.SqlClient` font partie n’est plus de `Microsoft.AspNetCore.App`.</span><span class="sxs-lookup"><span data-stu-id="9c40a-115">For example, `Microsoft.EntityFrameworkCore` and `System.Data.SqlClient` are no longer part of `Microsoft.AspNetCore.App`.</span></span> <span data-ttu-id="9c40a-116">La liste des assemblys d’expédition dans `Microsoft.AspNetCore.App` n’a pas été déjà finalisées et changera avant la version RTM 3.0.</span><span class="sxs-lookup"><span data-stu-id="9c40a-116">The list of assemblies shipping in `Microsoft.AspNetCore.App` hasn't been finalized yet and will change before 3.0 RTM.</span></span>
 
-  <span data-ttu-id="71f21-114">S’il n’existe aucune version 3.0 d’un package, le package peut ont été déconseillé dans 3.0.</span><span class="sxs-lookup"><span data-stu-id="71f21-114">If there is no 3.0 version of a package, the package might have been deprecated in 3.0.</span></span> <span data-ttu-id="71f21-115">Nombre d'entre eux font partie de `Microsoft.AspNetCore.App` et ne doivent pas être référencés individuellement plus.</span><span class="sxs-lookup"><span data-stu-id="71f21-115">Many of these are part of `Microsoft.AspNetCore.App` and should not be referenced individually anymore.</span></span> <span data-ttu-id="71f21-116">Pour obtenir une liste préliminaire des packages ne sont plus produites dans 3.0, consultez [aspnet/AspNetCore #3756](https://github.com/aspnet/AspNetCore/issues/3756).</span><span class="sxs-lookup"><span data-stu-id="71f21-116">For a preliminary list of packages no longer produced in 3.0, see [aspnet/AspNetCore #3756](https://github.com/aspnet/AspNetCore/issues/3756).</span></span>
-
-* <span data-ttu-id="71f21-117">Certains assemblys ont été supprimées de `Microsoft.AspNetCore.App` entre 2.x et 3.0.</span><span class="sxs-lookup"><span data-stu-id="71f21-117">Some assemblies were removed from `Microsoft.AspNetCore.App` between 2.x and 3.0.</span></span> <span data-ttu-id="71f21-118">Vous devrez peut-être ajouter `<PackageReference>` si vous utilisez des API à partir de packages répertoriés dans les éléments [aspnet/AspNetCore #3755](https://github.com/aspnet/AspNetCore/issues/3755)</span><span class="sxs-lookup"><span data-stu-id="71f21-118">You may need to add `<PackageReference>` items if you're using APIs from packages listed in [aspnet/AspNetCore #3755](https://github.com/aspnet/AspNetCore/issues/3755)</span></span>
-
-  <span data-ttu-id="71f21-119">Par exemple, `Microsoft.EntityFrameworkCore` et `System.Data.SqlClient` font partie n’est plus de `Microsoft.AspNetCore.App`.</span><span class="sxs-lookup"><span data-stu-id="71f21-119">For example, `Microsoft.EntityFrameworkCore` and `System.Data.SqlClient` are no longer part of `Microsoft.AspNetCore.App`.</span></span> <span data-ttu-id="71f21-120">La liste des assemblys d’expédition dans `Microsoft.AspNetCore.App` n’a pas été déjà finalisées et changera avant la version RTM 3.0.</span><span class="sxs-lookup"><span data-stu-id="71f21-120">The list of assemblies shipping in `Microsoft.AspNetCore.App` hasn't been finalized yet and will change before 3.0 RTM.</span></span>
-
-* <span data-ttu-id="71f21-121">Ajouter [prise en charge de Json.NET](#json)</span><span class="sxs-lookup"><span data-stu-id="71f21-121">Add [Json.NET support](#json)</span></span>
+* <span data-ttu-id="9c40a-117">Ajouter [prise en charge de Json.NET](#json)</span><span class="sxs-lookup"><span data-stu-id="9c40a-117">Add [Json.NET support](#json)</span></span>
 
 <a name="json"></a>
 
-## <a name="jsonnet-support"></a><span data-ttu-id="71f21-122">Prise en charge de Json.NET</span><span class="sxs-lookup"><span data-stu-id="71f21-122">Json.NET support</span></span>
+## <a name="jsonnet-support"></a><span data-ttu-id="9c40a-118">Prise en charge de Json.NET</span><span class="sxs-lookup"><span data-stu-id="9c40a-118">Json.NET support</span></span>
 
-<span data-ttu-id="71f21-123">Dans le cadre du travail à [améliorer framework ASP.NET Core partagé](https://blogs.msdn.microsoft.com/webdev/2018/10/29/a-first-look-at-changes-coming-in-asp-net-core-3-0/), [Json.NET](https://www.newtonsoft.com/json/help/html/Introduction.htm) a été supprimé de l’infrastructure partagée ASP.NET Core.</span><span class="sxs-lookup"><span data-stu-id="71f21-123">As part of the work to [improve the ASP.NET Core shared framework](https://blogs.msdn.microsoft.com/webdev/2018/10/29/a-first-look-at-changes-coming-in-asp-net-core-3-0/), [Json.NET](https://www.newtonsoft.com/json/help/html/Introduction.htm) has been removed from the ASP.NET Core shared framework.</span></span>
+<span data-ttu-id="9c40a-119">Dans le cadre du travail à [améliorer framework ASP.NET Core partagé](https://blogs.msdn.microsoft.com/webdev/2018/10/29/a-first-look-at-changes-coming-in-asp-net-core-3-0/), [Json.NET](https://www.newtonsoft.com/json/help/html/Introduction.htm) a été supprimé de l’infrastructure partagée ASP.NET Core.</span><span class="sxs-lookup"><span data-stu-id="9c40a-119">As part of the work to [improve the ASP.NET Core shared framework](https://blogs.msdn.microsoft.com/webdev/2018/10/29/a-first-look-at-changes-coming-in-asp-net-core-3-0/), [Json.NET](https://www.newtonsoft.com/json/help/html/Introduction.htm) has been removed from the ASP.NET Core shared framework.</span></span>
 
-<span data-ttu-id="71f21-124">Pour utiliser Json.NET dans un projet ASP.NET Core 3.0 :</span><span class="sxs-lookup"><span data-stu-id="71f21-124">To use Json.NET in an ASP.NET Core 3.0 project:</span></span>
+<span data-ttu-id="9c40a-120">Pour utiliser Json.NET dans un projet ASP.NET Core 3.0 :</span><span class="sxs-lookup"><span data-stu-id="9c40a-120">To use Json.NET in an ASP.NET Core 3.0 project:</span></span>
 
-- <span data-ttu-id="71f21-125">Ajouter une référence de package à [Microsoft.AspNetCore.Mvc.NewtonsoftJson](https://nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson)</span><span class="sxs-lookup"><span data-stu-id="71f21-125">Add a package reference to [Microsoft.AspNetCore.Mvc.NewtonsoftJson](https://nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson)</span></span>
-- <span data-ttu-id="71f21-126">Mise à jour `ConfigureServices` pour appeler `AddNewtonsoftJson()`.</span><span class="sxs-lookup"><span data-stu-id="71f21-126">Update `ConfigureServices` to call `AddNewtonsoftJson()`.</span></span>
+- <span data-ttu-id="9c40a-121">Ajouter une référence de package à [Microsoft.AspNetCore.Mvc.NewtonsoftJson](https://nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson)</span><span class="sxs-lookup"><span data-stu-id="9c40a-121">Add a package reference to [Microsoft.AspNetCore.Mvc.NewtonsoftJson](https://nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson)</span></span>
+- <span data-ttu-id="9c40a-122">Mise à jour `ConfigureServices` pour appeler `AddNewtonsoftJson()`.</span><span class="sxs-lookup"><span data-stu-id="9c40a-122">Update `ConfigureServices` to call `AddNewtonsoftJson()`.</span></span>
 
     ```csharp
     services.AddMvc()
         .AddNewtonsoftJson();
     ```
 
-<span data-ttu-id="71f21-127">Permet de définir les paramètres de Newtonsoft avec `AddNewtonsoftJson`:</span><span class="sxs-lookup"><span data-stu-id="71f21-127">Newtonsoft settings can be set with `AddNewtonsoftJson`:</span></span>
+<span data-ttu-id="9c40a-123">Permet de définir les paramètres de Newtonsoft avec `AddNewtonsoftJson`:</span><span class="sxs-lookup"><span data-stu-id="9c40a-123">Newtonsoft settings can be set with `AddNewtonsoftJson`:</span></span>
 
   ```csharp
   services.AddMvc()
@@ -76,21 +66,21 @@ ms.locfileid: "55667360"
                 new CamelCasePropertyNamesContractResolver());
   ```
 
-## <a name="hostbuilder-replaces-webhostbuilder"></a><span data-ttu-id="71f21-128">HostBuilder remplace WebHostBuilder</span><span class="sxs-lookup"><span data-stu-id="71f21-128">HostBuilder replaces WebHostBuilder</span></span>
+## <a name="hostbuilder-replaces-webhostbuilder"></a><span data-ttu-id="9c40a-124">HostBuilder remplace WebHostBuilder</span><span class="sxs-lookup"><span data-stu-id="9c40a-124">HostBuilder replaces WebHostBuilder</span></span>
 
-<span data-ttu-id="71f21-129">Les modèles ASP.NET Core 3.0 utilisent [hôte générique](xref:fundamentals/host/generic-host).</span><span class="sxs-lookup"><span data-stu-id="71f21-129">The ASP.NET Core 3.0 templates use [Generic Host](xref:fundamentals/host/generic-host).</span></span> <span data-ttu-id="71f21-130">Les versions précédentes utilisées [hôte Web](xref:fundamentals/host/web-host).</span><span class="sxs-lookup"><span data-stu-id="71f21-130">Previous versions used [Web Host](xref:fundamentals/host/web-host).</span></span> <span data-ttu-id="71f21-131">Le code suivant montre le modèle ASP.NET Core 3.0 généré `Program` classe :</span><span class="sxs-lookup"><span data-stu-id="71f21-131">The following code shows the ASP.NET Core 3.0 template generated `Program` class:</span></span>
+<span data-ttu-id="9c40a-125">Les modèles ASP.NET Core 3.0 utilisent [hôte générique](xref:fundamentals/host/generic-host).</span><span class="sxs-lookup"><span data-stu-id="9c40a-125">The ASP.NET Core 3.0 templates use [Generic Host](xref:fundamentals/host/generic-host).</span></span> <span data-ttu-id="9c40a-126">Les versions précédentes utilisées [hôte Web](xref:fundamentals/host/web-host).</span><span class="sxs-lookup"><span data-stu-id="9c40a-126">Previous versions used [Web Host](xref:fundamentals/host/web-host).</span></span> <span data-ttu-id="9c40a-127">Le code suivant montre le modèle ASP.NET Core 3.0 généré `Program` classe :</span><span class="sxs-lookup"><span data-stu-id="9c40a-127">The following code shows the ASP.NET Core 3.0 template generated `Program` class:</span></span>
 
 [!code-csharp[](22-to-30/samples/Program.cs?name=snippet)]
 
-<span data-ttu-id="71f21-132">Le code suivant montre la 2.2 Core ASP.NET modèle généré `Program` classe :</span><span class="sxs-lookup"><span data-stu-id="71f21-132">The following code shows the ASP.NET Core 2.2 template-generated `Program` class:</span></span>
+<span data-ttu-id="9c40a-128">Le code suivant montre la 2.2 Core ASP.NET modèle généré `Program` classe :</span><span class="sxs-lookup"><span data-stu-id="9c40a-128">The following code shows the ASP.NET Core 2.2 template-generated `Program` class:</span></span>
 
 [!code-csharp[](22-to-30/samples/Program2.2.cs?name=snippet)]
 
-<span data-ttu-id="71f21-133"><xref:Microsoft.AspNetCore.Hosting.IWebHostBuilder> reste dans 3.0 et est le type de la `webBuilder` vu dans l’exemple de code précédent.</span><span class="sxs-lookup"><span data-stu-id="71f21-133"><xref:Microsoft.AspNetCore.Hosting.IWebHostBuilder> remains in 3.0 and is the type of the `webBuilder` seen in the preceding code sample.</span></span> <span data-ttu-id="71f21-134"><xref:Microsoft.AspNetCore.Hosting.WebHostBuilder> sera déconseillée dans une version ultérieure et remplacé par `HostBuilder`.</span><span class="sxs-lookup"><span data-stu-id="71f21-134"><xref:Microsoft.AspNetCore.Hosting.WebHostBuilder> will be deprecated in a future release and replaced by `HostBuilder`.</span></span>
+<span data-ttu-id="9c40a-129"><xref:Microsoft.AspNetCore.Hosting.IWebHostBuilder> reste dans 3.0 et est le type de la `webBuilder` vu dans l’exemple de code précédent.</span><span class="sxs-lookup"><span data-stu-id="9c40a-129"><xref:Microsoft.AspNetCore.Hosting.IWebHostBuilder> remains in 3.0 and is the type of the `webBuilder` seen in the preceding code sample.</span></span> <span data-ttu-id="9c40a-130"><xref:Microsoft.AspNetCore.Hosting.WebHostBuilder> sera déconseillée dans une version ultérieure et remplacé par `HostBuilder`.</span><span class="sxs-lookup"><span data-stu-id="9c40a-130"><xref:Microsoft.AspNetCore.Hosting.WebHostBuilder> will be deprecated in a future release and replaced by `HostBuilder`.</span></span>
 
-## <a name="moving-from-webhostbuilder-to-hostbuilder"></a><span data-ttu-id="71f21-135">Passage de WebHostBuilder à HostBuilder</span><span class="sxs-lookup"><span data-stu-id="71f21-135">Moving from WebHostBuilder to HostBuilder</span></span>
+## <a name="moving-from-webhostbuilder-to-hostbuilder"></a><span data-ttu-id="9c40a-131">Passage de WebHostBuilder à HostBuilder</span><span class="sxs-lookup"><span data-stu-id="9c40a-131">Moving from WebHostBuilder to HostBuilder</span></span>
 
-<span data-ttu-id="71f21-136">La modification la plus importante à partir de `WebHostBuilder` à `HostBuilder` est dans [l’injection de dépendance (DI)](xref:fundamentals/dependency-injection).</span><span class="sxs-lookup"><span data-stu-id="71f21-136">The most significant change from `WebHostBuilder` to `HostBuilder` is in [dependency injection (DI)](xref:fundamentals/dependency-injection).</span></span> <span data-ttu-id="71f21-137">Lorsque vous utilisez `HostBuilder`, vous pouvez injecter uniquement <xref:Microsoft.Extensions.Configuration.IConfiguration>, <xref:Microsoft.Extensions.Hosting.IHostingEnvironment>, et <xref:Microsoft.AspNetCore.Hosting.IHostingEnvironment> dans le constructeur du démarrage.</span><span class="sxs-lookup"><span data-stu-id="71f21-137">When using `HostBuilder`, you can only inject <xref:Microsoft.Extensions.Configuration.IConfiguration>, <xref:Microsoft.Extensions.Hosting.IHostingEnvironment>, and <xref:Microsoft.AspNetCore.Hosting.IHostingEnvironment> into Startup's constructor.</span></span> <span data-ttu-id="71f21-138">Le `HostBuilder` les contraintes de l’injection de dépendances :</span><span class="sxs-lookup"><span data-stu-id="71f21-138">The `HostBuilder` DI constraints:</span></span>
+<span data-ttu-id="9c40a-132">La modification la plus importante à partir de `WebHostBuilder` à `HostBuilder` est dans [l’injection de dépendance (DI)](xref:fundamentals/dependency-injection).</span><span class="sxs-lookup"><span data-stu-id="9c40a-132">The most significant change from `WebHostBuilder` to `HostBuilder` is in [dependency injection (DI)](xref:fundamentals/dependency-injection).</span></span> <span data-ttu-id="9c40a-133">Lorsque vous utilisez `HostBuilder`, vous pouvez injecter uniquement <xref:Microsoft.Extensions.Configuration.IConfiguration>, <xref:Microsoft.Extensions.Hosting.IHostingEnvironment>, et <xref:Microsoft.AspNetCore.Hosting.IHostingEnvironment> dans le constructeur du démarrage.</span><span class="sxs-lookup"><span data-stu-id="9c40a-133">When using `HostBuilder`, you can only inject <xref:Microsoft.Extensions.Configuration.IConfiguration>, <xref:Microsoft.Extensions.Hosting.IHostingEnvironment>, and <xref:Microsoft.AspNetCore.Hosting.IHostingEnvironment> into Startup's constructor.</span></span> <span data-ttu-id="9c40a-134">Le `HostBuilder` les contraintes de l’injection de dépendances :</span><span class="sxs-lookup"><span data-stu-id="9c40a-134">The `HostBuilder` DI constraints:</span></span>
 
-* <span data-ttu-id="71f21-139">Activer le conteneur d’injection de dépendance à générer qu’une seule fois.</span><span class="sxs-lookup"><span data-stu-id="71f21-139">Enable the DI container to be built only one time.</span></span>
-* <span data-ttu-id="71f21-140">Permet d’éviter les problèmes de durée de vie objet résultant comme la résolution de plusieurs instances de singletons.</span><span class="sxs-lookup"><span data-stu-id="71f21-140">Avoids the resulting object lifetime issues like resolving multiple instances of singletons.</span></span>
+* <span data-ttu-id="9c40a-135">Activer le conteneur d’injection de dépendance à générer qu’une seule fois.</span><span class="sxs-lookup"><span data-stu-id="9c40a-135">Enable the DI container to be built only one time.</span></span>
+* <span data-ttu-id="9c40a-136">Permet d’éviter les problèmes de durée de vie objet résultant comme la résolution de plusieurs instances de singletons.</span><span class="sxs-lookup"><span data-stu-id="9c40a-136">Avoids the resulting object lifetime issues like resolving multiple instances of singletons.</span></span>
